IOR Value Slider with "Ctrl" modifier does not increment as intended #45281

Closed
opened 2015-07-03 00:26:17 +02:00 by Dennis Brown · 12 comments

System Information
Windows 7 Pro SP1 x64
nVidia GTX 960

Blender Version
Broken: #c6b042b

Short description of error
When using the Ctrl key to move the IOR slider in increments of .1, the slider actually moves in increments of 10. I'm not sure this is a realistic increment, when all others will use .1, and especially when the Shift modifier increments in .01. This happens with both the Glass and Fresnel IOR sliders.

Exact steps for others to reproduce the error

  1. Create a new material while using the Cycles Render Engine
  2. Switch view to Node Editor, and create a Fresnel (Shift + A, I, F), and Glass Shader (Shift + A, H, B).
  3. Click the slider and start to move it to the left or right, and then hold down the Ctrl key to move in increments. Observe the movement in increments of 10
  4. (Optional) Click the slider to start to move it to the left or right, and hold down the Shift key to move in increments, to show the movement in .01
  5. (Optional) Click the left and right buttons next to the slider to show increments of .1 being used
**System Information** Windows 7 Pro SP1 x64 nVidia GTX 960 **Blender Version** Broken: #c6b042b **Short description of error** When using the Ctrl key to move the IOR slider in increments of .1, the slider actually moves in increments of 10. I'm not sure this is a realistic increment, when all others will use .1, and especially when the Shift modifier increments in .01. This happens with both the Glass and Fresnel IOR sliders. **Exact steps for others to reproduce the error** 1. Create a new material while using the Cycles Render Engine 2. Switch view to Node Editor, and create a Fresnel (Shift + A, I, F), and Glass Shader (Shift + A, H, B). 3. Click the slider and start to move it to the left or right, and then hold down the Ctrl key to move in increments. Observe the movement in increments of 10 4. (Optional) Click the slider to start to move it to the left or right, and hold down the Shift key to move in increments, to show the movement in .01 5. (Optional) Click the left and right buttons next to the slider to show increments of .1 being used
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DBrown

Added subscriber: @DBrown

Added subscriber: @ThomasRadeke

Added subscriber: @ThomasRadeke

This bug seems to be related to #45280 ...

[Edit] sorry, didn't want to mix things up. Was just thinking they might be related.

This bug seems to be related to [#45280 ](https://developer.blender.org/T45280) ... [Edit] sorry, didn't want to mix things up. Was just thinking they might be related.
Member

Closed as duplicate of #45280

Closed as duplicate of #45280

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Duplicate' to: 'Open'

Changed status from 'Duplicate' to: 'Open'

No it is not, please do not mix things here.

shift-alt-scroll was removed, ctrl-scroll is still unchanged - and looks buggy to me even in 2.74…

No it is not, please do not mix things here. shift-alt-scroll was removed, ctrl-scroll is still unchanged - and looks buggy to me even in 2.74…

Getting same behavior with e.g. dimension values… will check.

Getting same behavior with e.g. dimension values… will check.
Bastien Montagne self-assigned this 2015-07-03 13:06:24 +02:00

This issue was referenced by c503d17353

This issue was referenced by c503d1735351a74c43a3ae26c7ff774e940f2a26

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 8b907a2b27

This issue was referenced by 8b907a2b27573bd94933bf41f381eee50a611903
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45281
No description provided.