Fix T45281: IOR Value Slider with "Ctrl" modifier does not increment as intended.

Looks like a typo in rB1b8069bd?