source/blender/editors/interface/interface_handlers.c
@@ -3934,7 +3934,7 @@ static float ui_numedit_apply_snapf(
 		/* workaround, too high snapping values */
 		/* snapping by 10's for float buttons is quite annoying (location, scale...),
 		 * but allow for rotations */
-		if ((softrange > 2100.0f)) {
+		if (softrange >= 21.0f) {
 			int unit_type = UI_but_unit_type_get(but);
 			if (!ELEM(unit_type, PROP_UNIT_ROTATION)) {
 				softrange = 20.0f;
